[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = {version = "0.12.4", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

